# neumann

./: .gitignore  LICENSE  README.md  docker-compose.yml  example.env  neu.py  pyproject.toml  ruff.md
docker/: entrypoint.sh
neumann/: __init__.py  cli.py  constants.py  main.py  sse_client.py  tools.py
neumann/strategies/: __init__.py  base.py  qwen.py
